--- a/DocLink/Views/Home/Index.cshtml
+++ b/DocLink/Views/Home/Index.cshtml
@@ -2,7 +2,11 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div>
+    @* <h1 class="text-5xl text-center"> *@
+    @*     Welcome to DocLink *@
+    @* </h1> *@
+    <div class="w-[400px]">
+        <img src="images/doclink.png" alt="logo"/>
+    </div>
 </div>
