--- a/DocLink/Views/Shared/_Layout.cshtml
+++ b/DocLink/Views/Shared/_Layout.cshtml
@@ -1,44 +1,71 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="dark">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - DocLink</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/styles.css" asp-append-version="true" />
 </head>
-<body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">DocLink</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
+<body class="text-white bg-[#1D232A]">
+    <div class="navbar bg-base-100 flex justify-between items-center">
+        <div class="flex-1">
+            <a class="btn btn-ghost text-xl">DocLink</a>
+        </div>
+        <div class="flex-none">
+            <ul class="menu menu-horizontal px-1">
+                <li><a asp-area="" class="decoration-0" asp-controller="Home" asp-action="Index" >Home</a></li>
+                <li><a>Doctors</a></li>
+                <li><a>Appointments</a></li>
+                @* <li> *@
+                @*     <details> *@
+                @*         <summary>Parent</summary> *@
+                @*         <ul class="bg-base-100 rounded-t-none p-2"> *@
+                @*             <li><a>Link 1</a></li> *@
+                @*             <li><a>Link 2</a></li> *@
+                @*         </ul> *@
+                @*     </details> *@
+                @* </li> *@
+            </ul>
+        </div>
+        <div class="flex-none gap-2">
+            @* <div class="form-control"> *@
+            @*     <input type="text" placeholder="Search" class="input input-bordered w-24 md:w-auto" /> *@
+            @* </div> *@
+            <div class="dropdown dropdown-end">
+                <div tabindex="0" role="button" class="btn btn-ghost btn-circle avatar">
+                    <div class="w-10 rounded-full">
+                        <img
+                            alt="Tailwind CSS Navbar component"
+                            src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" />
+                    </div>
                 </div>
+                <ul
+                    tabindex="0"
+                    class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
+                    <li>
+                        <a class="justify-between">
+                            Profile
+                            <span class="badge">New</span>
+                        </a>
+                    </li>
+                    <li><a>Settings</a></li>
+                    <li><a>Logout</a></li>
+                </ul>
             </div>
-        </nav>
-    </header>
-    <div class="container">
-        <main role="main" class="pb-3">
+        </div>
+    </div>   
+    <div class="">
+        <main  class="pb-3 flex flex-col justify-center items-center">
             @RenderBody()
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2024 - DocLink - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
+    <footer class="footer footer-center bg-base-300 text-base-content p-4">
+        <aside>
+            <p>Developed by Kris Patel and Kavin Shah  © 2024 - DocLink</p>
+        </aside>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
