--- a/DocLink/Views/_ViewImports.cshtml
+++ b/DocLink/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using DocLink
 @using DocLink.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
+@using Microsoft.AspNetCore.Http
