--- a/DocLink/Views/_ViewImports.cshtml
+++ b/DocLink/Views/_ViewImports.cshtml
@@ -3,6 +3,9 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
 @using Microsoft.AspNetCore.Http
+@using Microsoft.AspNetCore.Authentication
+@inject IAuthenticationService authService
+
 
 <!-- Bootstrap CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
