--- a/DocLink/Views/Hospital/Signup.cshtml
+++ b/DocLink/Views/Hospital/Signup.cshtml
@@ -1,47 +1,61 @@
 ﻿@model DocLink.Models.Hospital
 
 @{
-    ViewData["Title"] = "Hospital Signup";
+ViewData["Title"] = "Hospital Signup";
 }
 
-<h2>Hospital Signup</h2>
+<div class="signup-container">
+    <h2 class="text-center text-xl">Hospital Signup</h2>
 
-<form asp-action="Signup" method="post">
-    <div class="form-group">
-        <label asp-for="Name" class="control-label"></label>
-        <input asp-for="Name" class="form-control" />
-        <span asp-validation-for="Name" class="text-danger"></span>
+    <form asp-action="Signup" method="post" class="mt-8 space-y-4 flex flex-col justify-center items-center">
+        <label class="input input-bordered flex items-center gap-2">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" class="h-4 w-4 opacity-70">
+                <path d="M2.5 3A1.5 1.5 0 0 0 1 4.5v.793c.026.009.051.02.076.032L7.674 8.51c.206.1.446.1.652 0l6.598-3.185A.755.755 0 0 1 15 5.293V4.5A1.5 1.5 0 0 0 13.5 3h-11Z" />
+                <path d="M15 6.954 8.978 9.86a2.25 2.25 0 0 1-1.956 0L1 6.954V11.5A1.5 1.5 0 0 0 2.5 13h11a1.5 1.5 0 0 0 1.5-1.5V6.954Z" />
+            </svg>
+            <input asp-for="Name" class="grow" placeholder="Hospital Name" />
+            <span asp-validation-for="Name" class="text-danger"></span>
+        </label>
+        <label class="input input-bordered flex items-center gap-2">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" class="h-4 w-4 opacity-70">
+                <path fill-rule="evenodd" d="M1 4a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V4ZM1 2.5A1.5 1.5 0 0 1 2.5 1h11A1.5 1.5 0 0 1 15 2.5v11A1.5 1.5 0 0 1 13.5 15h-11A1.5 1.5 0 0 1 1 13.5v-11Z" clip-rule="evenodd"/>
+            </svg>
+            <input asp-for="Address" class="grow" placeholder="Address" />
+            <span asp-validation-for="Address" class="text-danger"></span>
+        </label>
+        <label class="input input-bordered flex items-center gap-2">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" class="h-4 w-4 opacity-70">
+                <path d="M3.5 3a1 1 0 0 1 1 1v6.586l2.293-2.293a1 1 0 0 1 1.414 0l.293.293-4 4a1 1 0 0 1-1.414 0l-4-4 .293-.293a1 1 0 0 1 1.414 0L2.5 10.586V4a1 1 0 0 1 1-1h7a1 1 0 0 1 1 1v7a1 1 0 0 1-1 1H5a1 1 0 0 1-.707-.293l-1.5-1.5a1 1 0 0 1 1.414-1.414L5 12.586V4a1 1 0 0 1 1-1h7a1 1 0 0 1 1 1v6a1 1 0 0 1-1 1H5a1 1 0 0 1-1 1H3.5a1 1 0 0 1-1-1v-.5Z"/>
+            </svg>
+            <input asp-for="Phone" class="grow" placeholder="Phone" />
+            <span asp-validation-for="Phone" class="text-danger"></span>
+        </label>
+        <label class="input input-bordered flex items-center gap-2">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" class="h-4 w-4 opacity-70">
+                <path d="M2.5 3A1.5 1.5 0 0 0 1 4.5v.793c.026.009.051.02.076.032L7.674 8.51c.206.1.446.1.652 0l6.598-3.185A.755.755 0 0 1 15 5.293V4.5A1.5 1.5 0 0 0 13.5 3h-11Z" />
+                <path d="M15 6.954 8.978 9.86a2.25 2.25 0 0 1-1.956 0L1 6.954V11.5A1.5 1.5 0 0 0 2.5 13h11a1.5 1.5 0 0 0 1.5-1.5V6.954Z" />
+            </svg>
+            <input asp-for="Email" class="grow" placeholder="Email" />
+            <span asp-validation-for="Email" class="text-danger"></span>
+        </label>
+        <label class="input input-bordered flex items-center gap-2">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" class="h-4 w-4 opacity-70">
+                <path d="M2 4a1 1 0 0 1 1-1h10a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V4Zm1 1v6h10V5H3Zm2 1h1v1H5V6Zm1 2h-1v1h1V8Zm2 0h-1v1h1V8Z"/>
+            </svg>
+            <input asp-for="Password" type="password" class="grow" placeholder="Password" />
+            <span asp-validation-for="Password" class="text-danger"></span>
+        </label>
+
+        <button type="submit" class="btn btn-primary py-px mx-auto">Signup</button>
+    </form>
+
+    <div class="login-link mt-4">
+        <p>Already have an account? <a asp-controller="Hospital" asp-action="Login">Login</a></p>
     </div>
-
-    <div class="form-group">
-        <label asp-for="Address" class="control-label"></label>
-        <input asp-for="Address" class="form-control" />
-        <span asp-validation-for="Address" class="text-danger"></span>
-    </div>
-
-    <div class="form-group">
-        <label asp-for="Phone" class="control-label"></label>
-        <input asp-for="Phone" class="form-control" />
-        <span asp-validation-for="Phone" class="text-danger"></span>
-    </div>
-
-    <div class="form-group">
-        <label asp-for="Email" class="control-label"></label>
-        <input asp-for="Email" class="form-control" />
-        <span asp-validation-for="Email" class="text-danger"></span>
-    </div>
-
-    <div class="form-group">
-        <label asp-for="Password" class="control-label"></label>
-        <input asp-for="Password" class="form-control" />
-        <span asp-validation-for="Password" class="text-danger"></span>
-    </div>
-
-    <button type="submit" class="btn btn-primary">Signup</button>
-</form>
+</div>
 
 @section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
+@{
+await Html.RenderPartialAsync("_ValidationScriptsPartial");
+}
 }
