--- a/DocLink/Views/Patient/Login.cshtml
+++ b/DocLink/Views/Patient/Login.cshtml
@@ -5,39 +5,45 @@
 @model DocLink.ViewModel.LoginViewModel
 
 <div class="login-container">
-    <h2>Patient Login</h2>
-    <form asp-action="Login" method="post">
-        <div class="form-group">
-            <label asp-for="Email"></label>
-            <input asp-for="Email" class="form-control" />
+    <h2 class="text-center text-xl">Patient Login</h2>
+
+    <form asp-action="Login" method="post" class="mt-8 space-y-4 flex flex-col justify-center items-center ">
+        <label class="input input-bordered flex items-center gap-2">
+            <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 16 16"
+                fill="currentColor"
+                class="h-4 w-4 opacity-70">
+                <path
+                    d="M2.5 3A1.5 1.5 0 0 0 1 4.5v.793c.026.009.051.02.076.032L7.674 8.51c.206.1.446.1.652 0l6.598-3.185A.755.755 0 0 1 15 5.293V4.5A1.5 1.5 0 0 0 13.5 3h-11Z" />
+                <path
+                    d="M15 6.954 8.978 9.86a2.25 2.25 0 0 1-1.956 0L1 6.954V11.5A1.5 1.5 0 0 0 2.5 13h11a1.5 1.5 0 0 0 1.5-1.5V6.954Z" />
+            </svg>
+            <input asp-for="Email" class="grow" placeholder="Email" />
             <span asp-validation-for="Email" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="Password"></label>
-            <input asp-for="Password" type="password" class="form-control" />
+        </label>
+        <label class="input input-bordered flex items-center gap-2">
+            <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 16 16"
+                fill="currentColor"
+                class="h-4 w-4 opacity-70">
+                <path
+                    fill-rule="evenodd"
+                    d="M14 6a4 4 0 0 1-4.899 3.899l-1.955 1.955a.5.5 0 0 1-.353.146H5v1.5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1-.5-.5v-2.293a.5.5 0 0 1 .146-.353l3.955-3.955A4 4 0 1 1 14 6Zm-4-2a.75.75 0 0 0 0 1.5.5.5 0 0 1 .5.5.75.75 0 0 0 1.5 0 2 2 0 0 0-2-2Z"
+                    clip-rule="evenodd" />
+            </svg>
+            <input asp-for="Password" type="password" class="grow" placeholder="Password" />
             <span asp-validation-for="Password" class="text-danger"></span>
-        </div>
-        <button type="submit" class="btn btn-primary">Login</button>
+        </label>
+
+        <button type="submit" class="btn btn-primary py-px mx-auto">Login</button>
     </form>
 
-    <div class="signup-link">
+
+    <div class="signup-link mt-4">
         <p>Want to Register as Patient? <a asp-controller="Patient" asp-action="Signup">Sign up</a></p>
     </div>
-
-    <div class="Login-link">
-        <p>Want to Login as Hospital? <a asp-controller="Hospital" asp-action="Login">Login</a></p>
-    </div>
-
-    <div class="signup-link">
-        <p>Want to Register as Hospital? <a asp-controller="Hospital" asp-action="Signup">Sign up</a></p>
-    </div>
-
-
-
-
-
-
-
 
     
 </div>
