--- a/DocLink/Views/Patient/Signup.cshtml
+++ b/DocLink/Views/Patient/Signup.cshtml
@@ -7,35 +7,88 @@
 
 
 @model DocLink.Models.Patient
-
 <div class="signup-container">
-    <h2>Patient Signup</h2>
-    <form asp-action="Signup" method="post">
-        <div class="form-group">
-            <label asp-for="FullName"></label>
-            <input asp-for="FullName" class="form-control" />
+    <h2 class="text-center text-xl">Patient Signup</h2>
+
+    <form asp-action="Signup" method="post" class="mt-8 space-y-4 flex flex-col justify-center items-center">
+       
+        <label class="input input-bordered flex items-center gap-2">
+            <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 16 16"
+                fill="currentColor"
+                class="h-4 w-4 opacity-70">
+                <path
+                    d="M8 0a8 8 0 1 0 8 8A8 8 0 0 0 8 0Zm3.707 5.293a1 1 0 0 0-1.414-1.414L8 6.172l-2.293-2.293a1 1 0 0 0-1.414 1.414L6.586 7.5 4.293 9.793a1 1 0 0 0 1.414 1.414L8 8.828l2.293 2.293a1 1 0 0 0 1.414-1.414L9.414 7.5l2.293-2.293Z" />
+            </svg>
+            <input asp-for="FullName" class="grow" placeholder="Full Name" />
             <span asp-validation-for="FullName" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="Email"></label>
-            <input asp-for="Email" class="form-control" />
+        </label>
+
+      
+        <label class="input input-bordered flex items-center gap-2">
+            <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 16 16"
+                fill="currentColor"
+                class="h-4 w-4 opacity-70">
+                <path
+                    d="M2.5 3A1.5 1.5 0 0 0 1 4.5v.793c.026.009.051.02.076.032L7.674 8.51c.206.1.446.1.652 0l6.598-3.185A.755.755 0 0 1 15 5.293V4.5A1.5 1.5 0 0 0 13.5 3h-11Z" />
+                <path
+                    d="M15 6.954 8.978 9.86a2.25 2.25 0 0 1-1.956 0L1 6.954V11.5A1.5 1.5 0 0 0 2.5 13h11a1.5 1.5 0 0 0 1.5-1.5V6.954Z" />
+            </svg>
+            <input asp-for="Email" class="grow" placeholder="Email" />
             <span asp-validation-for="Email" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="Age"></label>
-            <input asp-for="Age" class="form-control" />
+        </label>
+
+       
+        <label class="input input-bordered flex items-center gap-2">
+            <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 16 16"
+                fill="currentColor"
+                class="h-4 w-4 opacity-70">
+                <path d="M2 2h12v1H2zM2 5h12v1H2zM2 8h12v1H2zM2 11h12v1H2zM2 14h12v1H2z" />
+            </svg>
+            <input asp-for="Age" class="grow" placeholder="Age" />
             <span asp-validation-for="Age" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="Password"></label>
-            <input asp-for="Password" type="password" class="form-control" />
+        </label>
+
+       
+        <label class="input input-bordered flex items-center gap-2">
+            <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 16 16"
+                fill="currentColor"
+                class="h-4 w-4 opacity-70">
+                <path
+                    fill-rule="evenodd"
+                    d="M14 6a4 4 0 0 1-4.899 3.899l-1.955 1.955a.5.5 0 0 1-.353.146H5v1.5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1-.5-.5v-2.293a.5.5 0 0 1 .146-.353l3.955-3.955A4 4 0 1 1 14 6Zm-4-2a.75.75 0 0 0 0 1.5.5.5 0 0 1 .5.5.75.75 0 0 0 1.5 0 2 2 0 0 0-2-2Z"
+                    clip-rule="evenodd" />
+            </svg>
+            <input asp-for="Password" type="password" class="grow" placeholder="Password" />
             <span asp-validation-for="Password" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="PhoneNumber"></label>
-            <input asp-for="PhoneNumber" class="form-control" />
+        </label>
+
+      
+        <label class="input input-bordered flex items-center gap-2">
+            <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 16 16"
+                fill="currentColor"
+                class="h-4 w-4 opacity-70">
+                <path d="M3 1h10v14H3zM6 3h4v10H6z" />
+            </svg>
+            <input asp-for="PhoneNumber" class="grow" placeholder="Phone Number" />
             <span asp-validation-for="PhoneNumber" class="text-danger"></span>
-        </div>
-        <button type="submit" class="btn btn-primary">Signup</button>
+        </label>
+
+        
+        <button type="submit" class="btn btn-primary py-px mx-auto">Signup</button>
     </form>
+
+    <div class="login-link mt-4">
+        <p>Already have an account? <a asp-controller="Patient" asp-action="Login">Login</a></p>
+    </div>
 </div>
+
