--- a/DocLink/Views/Patient/Login.cshtml
+++ b/DocLink/Views/Patient/Login.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    Layout = "_Layout"; // Ensure the layout is set correctly
+    Layout = "_Layout"; 
 }
 
 @model DocLink.ViewModel.LoginViewModel
