--- a/DocLink/Views/Patient/BookAppointment.cshtml
+++ b/DocLink/Views/Patient/BookAppointment.cshtml
@@ -1,35 +1,42 @@
-﻿
-@{
-}
-
-
-
-@model DocLink.Models.Appointment 
+﻿@model DocLink.Models.Appointment 
 
 @{
     ViewData["Title"] = "Book Appointment";
 }
 
-<h2 class="text-2xl font-semibold mb-4">Book Appointment with @ViewBag.Doctor.FullName</h2>
+<div class="min-h-screen flex items-center">
+    <div class="shadow-md rounded-lg p-8 w-full max-w-md">
+        <h2 class="text-2xl font-semibold mb-6 text-center text-gray-300">
+            Book Appointment with Dr. @ViewBag.Doctor.FullName
+        </h2>
 
-<form method="post" action="@Url.Action("CreateAppointment", "Patient")">
-    <input type="hidden" name="DoctorId" value="@ViewBag.Doctor.Id" />
+        <form method="post" action="@Url.Action("CreateAppointment", "Patient")" class="mt-8 space-y-4 flex flex-col justify-center items-center">
+            <input type="hidden" name="DoctorId" value="@ViewBag.Doctor.Id" />
 
-    <div class="mb-4">
-        <label for="subject" class="block text-lg">Subject:</label>
-        <input type="text" id="subject" name="Subject" required class="border border-gray-400 rounded-md p-2 w-full" />
+            <label class="input input-bordered flex items-center gap-2">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" class="h-4 w-4 opacity-70">
+                    <path d="M2.5 3a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-9A.5.5 0 0 1 1.5 3h1Zm2 0a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-9A.5.5 0 0 1 3.5 3h1Z"/>
+                </svg>
+                <input type="text" id="subject" name="Subject" required class="grow" placeholder="Subject" />
+            </label>
+
+            <label class="input input-bordered flex items-center gap-2">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" class="h-4 w-4 opacity-70">
+                    <path d="M3 8a5 5 0 0 1 10 0v5H3V8Zm6.5-1a.5.5 0 1 0-1 0v1h1V7Zm-.5 4a.5.5 0 1 0 0-1h-1v1h1Z"/>
+                </svg>
+                <input type="date" id="date" name="Date" required class="grow" min="@DateTime.Now.ToString("yyyy-MM-dd")" />
+            </label>
+
+            <label class="input input-bordered flex items-center gap-2">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" class="h-4 w-4 opacity-70">
+                    <path d="M8 1a7 7 0 1 0 7 7A7 7 0 0 0 8 1Zm.5 9.5H7V8h1.5v2.5Zm0-4.5H7V5h1.5v1.5Z"/>
+                </svg>
+                <input type="time" id="time" name="Time" required class="grow" />
+            </label>
+
+            <button type="submit" class="btn btn-primary py-px mx-auto">
+                Book Appointment
+            </button>
+        </form>
     </div>
-
-    <div class="mb-4">
-        <label for="date" class="block text-lg">Date:</label>
-        <input type="date" id="date" name="Date" required class="border border-gray-400 rounded-md p-2 w-full" min="@DateTime.Now.ToString("yyyy-MM-dd")" />
-    </div>
-
-   <div class="mb-4">
-        <label for="time" class="block text-lg">Time:</label>
-        <input type="time" id="time" name="Time" required class="border border-gray-400 rounded-md p-2 w-full" />
-    </div>
-  
-
-    <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition-colors duration-200">Submit</button>
-</form>
+</div>
