--- a/DocLink/Views/Shared/_Layout.cshtml
+++ b/DocLink/Views/Shared/_Layout.cshtml
@@ -50,8 +50,7 @@
 
                 <ul tabindex="0"
                     class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
-                    <li><a class="justify-between">Profile<span class="badge">New</span></a></li>
-                    <li><a>Settings</a></li>
+                   
 
                     @if (hospitalClaim != null)
                     {
@@ -63,6 +62,7 @@
                     }
                     else if (patientClaim != null)
                     {
+                        <li><a asp-controller="Patient" asp-action="Dashboard">Dashboard</a></li>
                     <li>
                         <form asp-controller="Patient" asp-action="Logout" method="post">
                             <button type="submit" class="btn btn-link">Logout (Patient)</button>
